Worked on models and textures for ship.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Prog 5: Snake </title>
+    <title>Program 3: Flocking + Lava </title>
     
     <link type="text/css" rel="stylesheet" href="rasterize.css">
   </head>
