--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
   <body onload="main();">
     <div class="row">
-      <div class="column">
-        <canvas id="myWebGLCanvas" width="800" height="800"></canvas>
+      <div id="mainDiv" class="column" >
+      <img src="./textures/fire.gif" id="myImageCanvas" width="800" height="550"></canvas>
+        <canvas  id="myWebGLCanvas" width="800" height="800"></canvas>
       </div>
       <div class="column" id="scoreboard">
         <br/>CONTROLS: <br />
