Slit up javascript file

--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
   </body>
     <script type="text/javascript" src="gl-matrix-min.js"></script>
     <script type="text/javascript" src="rasterize.js"></script>
+    <script type="text/javascript" src="lava.js"></script>
+    <script type="text/javascript" src="ships.js"></script>
+    <script type="text/javascript" src="game.js"></script>
 </div>
 </html>
