Split up files and working on fixing lava height calculations

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut icon" href="icon.PNG"/>
     <meta charset="UTF-8">
     <title>Program 3: Flocking + Lava </title>
     
